--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue3-aipage-widget",
+  "name": "aipage-widget",
   "version": "1.2.3",
-  "description": "aipage-editor自定义组件注册器（支持react和vue3.0技术栈），用于注册自定义渲染器和插件",
+  "description": "aipage-editor自定义组件注册器（支持react和vue2.0技术栈），用于注册自定义渲染器和插件",
   "keywords": [
-    "vue3-aipage-widget",
+    "aipage-widget",
     "自定义组件注册器",
     "aipage-widget自定义组件",
     "aipage-widget自定义插件"
@@ -43,7 +43,7 @@
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "react": "^16.14.0",
-    "vue": "^3.2.33"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -51,7 +51,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^17.0.13",
-    "@wibetter/amis-widget-cli": "^3.0.2",
+    "amis-widget-cli": "^3.0.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
     "prettier": "^2.0.5",
